--- a/SOF3081_FrontEnd/package.json
+++ b/SOF3081_FrontEnd/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
