--- a/SOF3081_FrontEnd/package.json
+++ b/SOF3081_FrontEnd/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "sweetalert2": "^11.26.20",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
